--- a/config/install/core.entity_view_display.node.blog_post.default.yml
+++ b/config/install/core.entity_view_display.node.blog_post.default.yml
@@ -7,7 +7,9 @@ dependencies:
     - field.field.node.blog_post.field_blog_post_image
     - field.field.node.blog_post.field_bottom_ctas
     - field.field.node.blog_post.field_categories
+    - field.field.node.blog_post.field_metatags
     - field.field.node.blog_post.field_related_posts
+    - field.field.node.blog_post.field_sections
     - field.field.node.blog_post.field_sidebar_ctas
     - field.field.node.blog_post.field_topics
     - image.style.blog_page
@@ -16,6 +18,7 @@ dependencies:
     - entity_reference_revisions
     - fences
     - image
+    - metatag
     - text
     - user
 id: node.blog_post.default
@@ -48,13 +51,20 @@ content:
         fences_label_classes: ''
   field_bottom_ctas:
     type: entity_reference_revisions_entity_view
-    weight: 4
+    weight: 7
     region: content
     label: hidden
     settings:
       view_mode: default
       link: ''
-    third_party_settings: {  }
+    third_party_settings:
+      fences:
+        fences_field_tag: none
+        fences_field_classes: ''
+        fences_field_item_tag: none
+        fences_field_item_classes: ''
+        fences_label_tag: none
+        fences_label_classes: ''
   field_categories:
     type: entity_reference_label
     weight: 2
@@ -70,9 +80,16 @@ content:
         fences_field_item_classes: ''
         fences_label_tag: h3
         fences_label_classes: ''
+  field_metatags:
+    weight: 8
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: metatag_empty_formatter
+    region: content
   field_related_posts:
     type: entity_reference_revisions_entity_view
-    weight: 5
+    weight: 4
     region: content
     label: above
     settings:
@@ -86,15 +103,38 @@ content:
         fences_field_item_classes: ''
         fences_label_tag: h3
         fences_label_classes: ''
+  field_sections:
+    weight: 6
+    label: hidden
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings:
+      fences:
+        fences_field_tag: none
+        fences_field_classes: ''
+        fences_field_item_tag: none
+        fences_field_item_classes: ''
+        fences_label_tag: none
+        fences_label_classes: ''
+    type: entity_reference_revisions_entity_view
+    region: content
   field_sidebar_ctas:
     type: entity_reference_revisions_entity_view
-    weight: 6
+    weight: 5
     region: content
     label: hidden
     settings:
       view_mode: default
       link: ''
-    third_party_settings: {  }
+    third_party_settings:
+      fences:
+        fences_field_tag: none
+        fences_field_classes: ''
+        fences_field_item_tag: none
+        fences_field_item_classes: ''
+        fences_label_tag: none
+        fences_label_classes: ''
   field_topics:
     type: entity_reference_label
     weight: 3
@@ -104,10 +144,10 @@ content:
       link: true
     third_party_settings:
       fences:
-        fences_field_tag: div
-        fences_field_classes: topics-list-wrapper
-        fences_field_item_tag: ul
-        fences_field_item_classes: topics-list
+        fences_field_tag: ul
+        fences_field_classes: ''
+        fences_field_item_tag: li
+        fences_field_item_classes: ''
         fences_label_tag: h3
         fences_label_classes: ''
 hidden:
