--- a/config/optional/core.entity_form_display.user.user.default.yml
+++ b/config/optional/core.entity_form_display.user.user.default.yml
@@ -41,6 +41,7 @@ content:
       rows: 9
       summary_rows: 3
       placeholder: ''
+      show_summary: false
     third_party_settings: {  }
   field_facebook:
     type: link_default
