--- a/alloy_blog.info.yml
+++ b/alloy_blog.info.yml
@@ -2,7 +2,7 @@ name: Alloy Blog
 type: module
 description: Defines base blog entities
 core: 8.x
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^8 || ^9 || ^10
 package: Alloy
 dependencies:
   - pathauto
