--- a/modules/alloy_blog_automatic_related_posts/alloy_blog_automatic_related_posts.info.yml
+++ b/modules/alloy_blog_automatic_related_posts/alloy_blog_automatic_related_posts.info.yml
@@ -2,6 +2,6 @@ name: Alloy Blog Automatic Related Posts
 description: 'Provides category-based related posts when none are provided manually.'
 type: module
 core: 8.x
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^8 || ^9 || ^10
 dependencies:
   - alloy_blog:alloy_blog
