--- a/config/install/pathauto.pattern.blog_post.yml
+++ b/config/install/pathauto.pattern.blog_post.yml
@@ -9,7 +9,7 @@ type: 'canonical_entities:node'
 pattern: '/[node:field_blog:entity:field_url_slug]/[node:title]'
 selection_criteria:
   467a4d50-6bd1-41fe-a969-97a0304a90d5:
-    id: node_type
+    id: entity_bundle:node
     bundles:
       blog_post: blog_post
     negate: false
