--- a/config/install/field.field.assembly.recent_blog_posts.field_filter_by_author.yml
+++ b/config/install/field.field.assembly.recent_blog_posts.field_filter_by_author.yml
@@ -17,11 +17,14 @@ default_value_callback: ''
 settings:
   handler: 'default:user'
   handler_settings:
-    include_anonymous: true
+    include_anonymous: false
     filter:
-      type: _none
+      type: role
+      role:
+        content_manager: content_manager
     target_bundles: null
     sort:
-      field: _none
+      field: name
+      direction: ASC
     auto_create: false
 field_type: entity_reference
