--- a/config/install/field.field.assembly.recent_blog_posts.field_filter_by_blog.yml
+++ b/config/install/field.field.assembly.recent_blog_posts.field_filter_by_blog.yml
@@ -19,6 +19,7 @@ settings:
   handler_settings:
     target_bundles: null
     sort:
-      field: _none
+      field: name
+      direction: ASC
     auto_create: false
 field_type: entity_reference
